# iqr_berserker

./: README.md
berserker/: CMakeLists.txt  package.xml
berserker/launch/: berserker.launch
berserker/script/: create_udev_rules.sh  delete_udev_rules.sh
berserker/script/rules/: HL-340.rules  arduino_due.rules
berserker_bringup/: CMakeLists.txt  package.xml
berserker_bringup/config/: params.yaml
berserker_bringup/include/: CRobot.h  CRobotSerial.h  CSerial.h  CUart.h  RobotStruct.h  function.h  thread.h
berserker_bringup/launch/: berserker_bringup.launch
berserker_bringup/nodes/: berserker_driver_node.cpp
berserker_bringup/src/: CRobot.cpp  CRobotSerial.cpp  CSerial.cpp  CUart.cpp  function.cpp  thread.cpp  timeout.cpp
berserker_description/: CMakeLists.txt  package.xml
berserker_description/launch/: display.launch  state_publisher.launch
berserker_description/rviz/: gmapping.rviz  rviz.rviz
berserker_description/urdf/: berserker.urdf.xacro  berserker_macro.urdf.xacro  rplidar_a2.urdf.xacro
berserker_description/urdf/mesh/: wheel.stl
berserker_driver/: CMakeLists.txt  package.xml
berserker_driver/config/: params.yaml
berserker_driver/include/: BerserkerDriver.h  QSerialPort.h
berserker_driver/launch/: berserker_driver.launch
berserker_driver/src/: BerserkerDriver.cpp  BerserkerDriverNode.cpp  QSerialPort.cpp
berserker_navigation/: CMakeLists.txt  package.xml
berserker_navigation/config/: navsat_transform.yaml  robot_localization.yaml
berserker_navigation/config/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
berserker_navigation/launch/: amcl.launch  gmapping.launch  hector.launch  move_base.launch  robot_localization.launch
berserker_navigation/maps/: 0311.pgm  0311.yaml  1.yaml  2.pgm  2.yaml  310.pgm  310.yaml  3f_1.pgm  3f_1.yaml  3f_2.pgm  3f_2.yaml  3f_3.pgm  3f_3.yaml  3f_4.pgm  3f_4.yaml  3f_5.pgm  3f_5.yaml  3f_6.yaml  410.pgm  410.yaml  blank_400_300.pgm  blank_400_300.yaml
berserker_navigation/rviz/: amcl.rviz  gmapping.rviz
